Enable TouchpadOverscrollHistoryNavigation on CrOS

In crrev.com/c/1013221, we want to disable TouchpadOverscrollHistoryNavigation
on Windows and Linux. But we also disable it on CrOS because I forgot checking
OS_CHROMEOS. In this patch, we enable TouchpadOverscrollHistoryNavigation on
OS_CHROMEOS which is same as today stable.

TouchpadOverscrollHistoryNavigation is Aura only, OS_MACOSX does not check
this flag.

Bug: 838741
Change-Id: Ib9362bc74af1cb800fab665079017fbcb7880402
Reviewed-on: https://chromium-review.googlesource.com/1039867
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Commit-Queue: Jianpeng Chao <chaopeng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555799}
Former-commit-id: 9da6a79f00b05144ed9784be63a9df70ef97c339